# puppy

./: .gitignore  CMakeLists.txt  conanfile.txt
cmake/: puppy-config.cmake.in  utils.cmake
examples/example/: CMakeLists.txt  main.cpp
examples/string/: CMakeLists.txt  main.cpp
include/puppy/core/: assert.hpp  common.hpp  contracts.hpp  log.hpp  platform.hpp  string.hpp  string_view.hpp  types.hpp  utility.hpp
include/puppy/core/detail/: unicode_convert.hpp
src/core/: log.cpp
tests/: CMakeLists.txt  test.cpp
